--- a/frontend/src/pages/Cadastrauser/Cadastrauser.module.css
+++ b/frontend/src/pages/Cadastrauser/Cadastrauser.module.css
@@ -61,7 +61,11 @@
             font-size: 16px;
             outline: none;
             padding-left: 15px;
-            
+            transition: all .2s linear;
+        }
+
+         & input:focus{
+            box-shadow: 0 4px 4px rgba(255, 255, 255, 0.5);
         }
         
         ::-webkit-input-placeholder  { color:rgb(255, 255, 255); }
