--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -4,15 +4,43 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background: red; */
+    position: relative;
+    overflow: hidden;
+
+    .areaUserLogado {
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 68px;
+      height: 68px;
+      z-index: 10;
+      text-align: center;
+      margin-top: 2rem;
+      margin-right: 2rem;
+      
+      .fotoUser {
+        width: 100%;
+        height: auto;
+        border-radius: 50%; /* opcional: deixa a imagem redonda */
+      }
+      
+      .nomeUsuario {
+        margin-top: 10px;
+        font-weight: bold;
+        color: #fff;    
+        margin-top: -.2rem;  
+        font-size: .7rem;  
+      }
+    }
+    
 }
+
 .container{
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;    
-    /* border: 1px solid red;    */
     padding: 3rem 0;
 
     & h1 {
