--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -108,7 +108,7 @@ h1{
     flex-direction: column;
     justify-content: center;
     align-items: center;    
-
+    margin-top: 1rem;
     & p {
         color: #fff;
     }
@@ -120,8 +120,19 @@ h1{
     cursor: pointer;
 }
 
-.btnLogaut:hover{
+.btnLogaut:hover, LinkSair:hover{
     color: #d7d7eb;
+}
+
+.LinkSair{
+    color: #d7d7eb;
+    text-decoration: none;
+    font-size: .8rem;   
+    cursor: pointer;
+}
+
+.LinkSair:hover{
+   opacity: .5;
 }
 
 .areabuttons{
