--- a/frontend/src/pages/Home/Home.module.css
+++ b/frontend/src/pages/Home/Home.module.css
@@ -56,7 +56,7 @@
     grid-template-columns: 1fr 2fr;    
     overflow: hidden;
     overflow-y: scroll; /* Barra de rolagem vertical */
-    border: 1px solid #1c70c445;  
+    border: 1px solid #ffffff45;  
     padding: 1rem; 
 }
 
@@ -101,7 +101,7 @@ h1{
     }
 }
 
-.logaut{
+.info{
     width: 100%;
     padding: 1rem;
     display: flex;
@@ -109,6 +109,9 @@ h1{
     justify-content: center;
     align-items: center;    
     margin-top: 1rem;
+    border: 1px solid #ffffff45; 
+    max-width: 880px;
+
     & p {
         color: #fff;
     }
